welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
	var l = nums.length
                ^island:5: error: not found: value nums
		if(nums(i+1)>nums(i)){
                   ^