welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var niveau = 0 
	var l = nums.length
	for(i<- 0 to (l-2)){
		if(nums(i+1)>nums(i)){
			niveau = niveau +1 
		}
	}
	return niveau
}
